--- a/culturefeed_search_ui/translations/culturefeed_search_ui.nl.po
+++ b/culturefeed_search_ui/translations/culturefeed_search_ui.nl.po
@@ -17,22 +17,24 @@
 #  theme/culturefeed-search-suggestions.tpl.php: n/a
 #  theme/theme.inc: n/a
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2013-07-25 17:33+0200\n"
-"PO-Revision-Date: 2013-07-25 17:33+0200\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-07-26 10:33+0100\n"
+"Last-Translator: Frontend CultuurNet <frontend@cultuurnet.be>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: culturefeed_search_ui.module:98
 msgid "Change Culture Feed Search UI settings like display, filters, …"
 msgstr ""
+"Verander de instellingen van de CultureFeed Search UI zoals weergave, "
+"filters,..."
 
 #: culturefeed_search_ui.module:234
 msgid "Culturefeed search: search events and pages"
@@ -60,7 +62,7 @@ msgstr ""
 
 #: culturefeed_search_ui.module:405
 msgid "Near"
-msgstr ""
+msgstr "In de buurt van"
 
 #: culturefeed_search_ui.module:61
 msgid "Culturefeed search"
@@ -75,40 +77,53 @@ msgid "CultureFeed Search UI"
 msgstr ""
 
 #: culturefeed_search_ui.info:0
-msgid "CultureFeed Search UI is the basic framework needed to view search pages from items. For example agenda/search page from the agenda module."
+msgid ""
+"CultureFeed Search UI is the basic framework needed to view search pages "
+"from items. For example agenda/search page from the agenda module."
 msgstr ""
+"CultureFeed Search UI is het basis framework om zoekopdrachten en "
+"resultatenpagina's te bekijken. Bijvoorbeeld agenda of zoekpagina's van de "
+"agendamodule. "
 
 #: culturefeed_search_ui.info:0
 msgid "CultureFeed"
-msgstr ""
+msgstr "CultureFeed"
 
 #: includes/admin.inc:15
 msgid "Number of items per page"
-msgstr ""
+msgstr "Aantal items per pagina"
 
 #: includes/admin.inc:21
 msgid "Pager type for the search page(s)"
-msgstr ""
+msgstr "Type bladwijzer bij zoekresultaten"
 
 #: includes/admin.inc:22
-msgid "The type of pager to use on search pages. This will trigger different templates as well."
+msgid ""
+"The type of pager to use on search pages. This will trigger different "
+"templates as well."
 msgstr ""
+"Het type bladwijzer op zoekpagina's. Hiervoor worden verschillende templates "
+"gebruikt. "
 
 #: includes/admin.inc:24
 msgid "Normal pager with page numbers"
-msgstr ""
+msgstr "Normale bladwijzer met paginanummers"
 
 #: includes/admin.inc:25
 msgid "Pager with button to manually scroll to infinity"
-msgstr ""
+msgstr "Bladwijzer met knop om handmatig te scrollen tot oneindig"
 
 #: includes/admin.inc:32
 msgid "Redirect old cnapi urls to the new system"
-msgstr ""
+msgstr "Verwijs oude cnapi url's door naar het nieuwe systeem"
 
 #: includes/admin.inc:33
-msgid "If enabled, all urls that where used by the cnapi module, will be redirected to urls for the new search api."
+msgid ""
+"If enabled, all urls that where used by the cnapi module, will be redirected "
+"to urls for the new search api."
 msgstr ""
+"Wanneer ingeschakeld zullen alle oude url's van op de cnapi-module, "
+"doorverwezen worden naar url's op de nieuwe search api"
 
 #: includes/blocks.inc:31
 msgid "Search in"
@@ -116,7 +131,7 @@ msgstr "Zoek in"
 
 #: includes/blocks.inc:38
 msgid "Search terms"
-msgstr ""
+msgstr "Zoekopdracht"
 
 #: includes/blocks.inc:45
 msgid "Search"
@@ -124,43 +139,43 @@ msgstr "Zoeken"
 
 #: includes/blocks.inc:103
 msgid "Sort"
-msgstr ""
+msgstr "Sorteer resultaten op"
 
 #: includes/blocks.inc:111
 msgid "Submit"
-msgstr ""
+msgstr "Voeg toe"
 
 #: includes/blocks.inc:218
 msgid "When"
-msgstr ""
+msgstr "Wanneer"
 
 #: includes/blocks.inc:236
 msgid "Choose a date"
-msgstr ""
+msgstr "Datum"
 
 #: includes/blocks.inc:239
 msgid "Our choose a custom date"
-msgstr ""
+msgstr "Of kies zelf een datum"
 
 #: includes/blocks.inc:244;358;406
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #: includes/blocks.inc:333;350
 msgid "Where"
-msgstr ""
+msgstr "Waar"
 
 #: includes/blocks.inc:353
 msgid "Zipcode or city"
-msgstr ""
+msgstr "Postcode of gemeente"
 
 #: includes/blocks.inc:399
 msgid "Search nearby"
-msgstr ""
+msgstr "Zoek in omgeving"
 
 #: includes/blocks.inc:446
 msgid "Remove all filters"
-msgstr ""
+msgstr "Alle filters verwijderen"
 
 #: includes/helpers.inc:89
 msgid "Today"
@@ -168,47 +183,47 @@ msgstr "Vandaag"
 
 #: includes/helpers.inc:90
 msgid "Next 7 days"
-msgstr ""
+msgstr "Volgende 7 dagen"
 
 #: includes/helpers.inc:91
 msgid "This weekend"
-msgstr ""
+msgstr "Dit weekend"
 
 #: includes/helpers.inc:92
 msgid "Next weekend"
-msgstr ""
+msgstr "Volgend weekend"
 
 #: includes/helpers.inc:93
 msgid "Next 14 days"
-msgstr ""
+msgstr "Volgende 14 dagen"
 
 #: includes/helpers.inc:94
 msgid "Next 30 days"
-msgstr ""
+msgstr "Volgende 30 dagen"
 
 #: includes/helpers.inc:95
 msgid "Next 12 months"
-msgstr ""
+msgstr "Volgende 12 maanden"
 
 #: includes/pages.inc:58;62;69
 msgid "There was an error while loading the search results."
-msgstr ""
+msgstr "Er is een fout opgetreden tijdens het laden van de zoekresultaten."
 
 #: js/search_ui.js:0
 msgid "Specific date"
-msgstr ""
+msgstr "Specifieke datum"
 
 #: js/search_ui.js:0
 msgid "Period from/to"
-msgstr ""
+msgstr "Van/tot"
 
 #: js/search_ui.js:0
 msgid "Start date"
-msgstr ""
+msgstr "Begindatum"
 
 #: js/search_ui.js:0
 msgid "End date"
-msgstr ""
+msgstr "Einddatum"
 
 #: js/search_ui.js:0
 msgid "OK"
@@ -216,41 +231,40 @@ msgstr "Ok"
 
 #: lib/Drupal/CultureFeedSearchPage.php:306
 msgid "More results"
-msgstr ""
+msgstr "Meer resultaten"
 
 #: lib/Drupal/CultureFeedSearchPage.php:317
 msgid "new search"
-msgstr ""
+msgstr "Nieuwe zoekopdracht"
 
 #: lib/Drupal/CultureFeedSearchPage.php:319
 msgid "There are no more results."
-msgstr ""
+msgstr "Er zijn geen zoekresultaten meer."
 
 #: lib/Drupal/CultureFeedSearchPage.php:320
 msgid "Did not find what you were looking for? Do a"
-msgstr ""
+msgstr "Niet gevonden wat u zocht? Voer een"
 
 #: lib/Drupal/InvalidSearchPageException.php:10
 msgid "Searchresults could not be loaded."
-msgstr ""
+msgstr "De zoekpagina kon niet geladen worden."
 
 #: theme/culturefeed-search-list.tpl.php:16
 msgid "No results found"
-msgstr ""
+msgstr "Geen resultaten gevonden"
 
 #: theme/culturefeed-search-page.tpl.php:11
 msgid "<strong>@count</strong> result found"
 msgid_plural "<strong>@count</strong> results found"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "<strong>@count</strong> resultaat gevonden"
+msgstr[1] "<strong>@count</strong> resultaten gevonden"
 
 #: theme/culturefeed-search-suggestions.tpl.php:8
 msgid "Did you mean"
-msgstr ""
+msgstr "Bedoelde je"
 
 #: theme/theme.inc:186
 msgid "@range from @count result"
 msgid_plural "@range from @count results"
-msgstr[0] ""
-msgstr[1] ""
-
+msgstr[0] "@range van @count resultaat"
+msgstr[1] "@range van @count resultaten"
