--- a/culturefeed_search_views/translations/culturefeed_search_views.nl.po
+++ b/culturefeed_search_views/translations/culturefeed_search_views.nl.po
@@ -20,22 +20,22 @@
 #  views/handlers/filter/views_handler_filter_culturefeed_search_in.inc: n/a
 #  views/plugins/culturefeed_search_views_row_cdb.inc: n/a
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2013-07-25 17:33+0200\n"
-"PO-Revision-Date: 2013-07-25 17:33+0200\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-07-26 10:48+0100\n"
+"Last-Translator: Frontend CultuurNet <frontend@cultuurnet.be>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: culturefeed_search_views.info:0
 msgid "CultureFeed Search Views"
-msgstr ""
+msgstr "CultureFeed Search views"
 
 #: culturefeed_search_views.info:0
 msgid "Views integration for culturefeed search"
@@ -47,19 +47,19 @@ msgstr ""
 
 #: views/culturefeed_search_views.views.inc:13
 msgid "Cdb items"
-msgstr ""
+msgstr "UDB items"
 
 #: views/culturefeed_search_views.views.inc:16
 msgid "Cdb item"
-msgstr ""
+msgstr "UDB item"
 
 #: views/culturefeed_search_views.views.inc:22
 msgid "Query"
-msgstr ""
+msgstr "Zoekopdracht"
 
 #: views/culturefeed_search_views.views.inc:23
 msgid "Perform a free text search."
-msgstr ""
+msgstr "Zoek op vrije tekst."
 
 #: views/culturefeed_search_views.views.inc:33
 msgid "Category: @domain"
@@ -67,63 +67,69 @@ msgstr ""
 
 #: views/culturefeed_search_views.views.inc:34
 msgid "Perform a search on category of this type."
-msgstr ""
+msgstr "Zoek op type."
 
-#: views/culturefeed_search_views.views.inc:43 views/handlers/filter/views_handler_filter_culturefeed_search_type.inc:24
+#: views/culturefeed_search_views.views.inc:43
+#: views/handlers/filter/views_handler_filter_culturefeed_search_type.inc:24
 msgid "Type"
 msgstr "Type"
 
 #: views/culturefeed_search_views.views.inc:44
 msgid "Type of the cdb item"
-msgstr ""
+msgstr "Type van het UDB item"
 
-#: views/culturefeed_search_views.views.inc:52 views/handlers/field/views_handler_field_cdb_item_link.inc:26 views/handlers/field/views_handler_field_cdb_item_location.inc:30
+#: views/culturefeed_search_views.views.inc:52
+#: views/handlers/field/views_handler_field_cdb_item_link.inc:26
+#: views/handlers/field/views_handler_field_cdb_item_location.inc:30
 msgid "Title"
 msgstr "Titel"
 
 #: views/culturefeed_search_views.views.inc:53
 msgid "Title of the cdb item"
-msgstr ""
+msgstr "Titel van het UDB item"
 
-#: views/culturefeed_search_views.views.inc:64 views/handlers/field/views_handler_field_cdb_item_location.inc:31 views/handlers/filter/views_handler_filter_culturefeed_search_city.inc:22
+#: views/culturefeed_search_views.views.inc:64
+#: views/handlers/field/views_handler_field_cdb_item_location.inc:31
+#: views/handlers/filter/views_handler_filter_culturefeed_search_city.inc:22
 msgid "City"
-msgstr ""
+msgstr "Stad of gemeente"
 
 #: views/culturefeed_search_views.views.inc:65
 msgid "Perform a search on a city."
-msgstr ""
+msgstr "Zoek op stad of gemeente."
 
 #: views/culturefeed_search_views.views.inc:73
 msgid "Location name"
-msgstr ""
+msgstr "Locatie"
 
 #: views/culturefeed_search_views.views.inc:74
 msgid "Perform a search on the location name."
-msgstr ""
+msgstr "Zoek op locatie."
 
-#: views/culturefeed_search_views.views.inc:82 views/handlers/filter/views_handler_filter_culturefeed_search_agefrom.inc:24
+#: views/culturefeed_search_views.views.inc:82
+#: views/handlers/filter/views_handler_filter_culturefeed_search_agefrom.inc:24
 msgid "Agefrom"
-msgstr ""
+msgstr "Vanaf leeftijd"
 
 #: views/culturefeed_search_views.views.inc:83
 msgid "Perform a search on minimum required age."
-msgstr ""
+msgstr "Zoek op minimumleeftijd"
 
 #: views/culturefeed_search_views.views.inc:94;169
 msgid "Organiser"
-msgstr ""
+msgstr "Organisator"
 
 #: views/culturefeed_search_views.views.inc:95
 msgid "Perform a search on organiser name."
-msgstr ""
+msgstr "Zoek op organisator."
 
 #: views/culturefeed_search_views.views.inc:103
 msgid "Free event"
-msgstr ""
+msgstr "Gratis activiteit"
 
 #: views/culturefeed_search_views.views.inc:104
 msgid "Perform a search on free events."
-msgstr ""
+msgstr "Zoek op gratis activiteiten."
 
 #: views/culturefeed_search_views.views.inc:112
 msgid "Date type"
@@ -131,7 +137,7 @@ msgstr "Data type"
 
 #: views/culturefeed_search_views.views.inc:113
 msgid "Perform a search on a predefined type of date query"
-msgstr ""
+msgstr "Zoek op periode"
 
 #: views/culturefeed_search_views.views.inc:119
 msgid "Date"
@@ -139,31 +145,31 @@ msgstr "Datum"
 
 #: views/culturefeed_search_views.views.inc:120
 msgid "Perform a search on a date"
-msgstr ""
+msgstr "Zoek op een specifieke datum"
 
 #: views/culturefeed_search_views.views.inc:132
 msgid "Total recommend"
-msgstr ""
+msgstr "Totaal aantal keer aanbevolen"
 
 #: views/culturefeed_search_views.views.inc:133
 msgid "Sort on recommend count."
-msgstr ""
+msgstr "Sorteer op aantal keer aanbevolen."
 
 #: views/culturefeed_search_views.views.inc:140
 msgid "Total comments"
-msgstr ""
+msgstr "Totaal aantal reacties"
 
 #: views/culturefeed_search_views.views.inc:141
 msgid "Sort on comment count."
-msgstr ""
+msgstr "Sorteer op het aantal reacties."
 
 #: views/culturefeed_search_views.views.inc:151
 msgid "Calendar summary"
-msgstr ""
+msgstr "Kalendersamenvatting"
 
 #: views/culturefeed_search_views.views.inc:152
 msgid "Summary of the calendar"
-msgstr ""
+msgstr "Samenvatting van de kalender"
 
 #: views/culturefeed_search_views.views.inc:160
 msgid "Location"
@@ -171,11 +177,11 @@ msgstr "Locatie"
 
 #: views/culturefeed_search_views.views.inc:161
 msgid "Location of the cdb item"
-msgstr ""
+msgstr "Locatie van het UDB item"
 
 #: views/culturefeed_search_views.views.inc:170
 msgid "Organiser of the cdb item"
-msgstr ""
+msgstr "Organisator van het UDB item"
 
 #: views/culturefeed_search_views.views.inc:178
 msgid "Picture"
@@ -183,7 +189,7 @@ msgstr "Afbeelding"
 
 #: views/culturefeed_search_views.views.inc:179
 msgid "Picture of the cdb item"
-msgstr ""
+msgstr "Afbeelding van het UDB item"
 
 #: views/culturefeed_search_views.views.inc:186
 msgid "Link"
@@ -191,23 +197,23 @@ msgstr "Link"
 
 #: views/culturefeed_search_views.views.inc:187
 msgid "Link to the cdb item"
-msgstr ""
+msgstr "Link naar het UDB item"
 
 #: views/culturefeed_search_views.views.inc:210
 msgid "Culturefeed Search Query"
-msgstr ""
+msgstr "CultureFeed Search Query"
 
 #: views/culturefeed_search_views.views.inc:211
 msgid "Query that allows you to search with culturefeed."
-msgstr ""
+msgstr "Zoekopdracht die je toestaat met CultureFeed te zoeken."
 
 #: views/culturefeed_search_views.views.inc:218
 msgid "Culturefeed cdb items"
-msgstr ""
+msgstr "CultureFeed UDB items"
 
 #: views/handlers/field/views_handler_field_cdb_item_link.inc:14
 msgid "Read more"
-msgstr ""
+msgstr "Lees meer"
 
 #: views/handlers/field/views_handler_field_cdb_item_location.inc:27
 msgid "Show"
@@ -215,7 +221,7 @@ msgstr "Weergeven"
 
 #: views/handlers/field/views_handler_field_cdb_item_location.inc:32
 msgid "Address"
-msgstr ""
+msgstr "Adres"
 
 #: views/handlers/field/views_handler_field_cdb_item_picture.inc:27
 msgid "Width"
@@ -227,15 +233,16 @@ msgstr "Hoogte"
 
 #: views/handlers/field/views_handler_field_cdb_item_title.inc:26
 msgid "Link the title to the detail page"
-msgstr ""
+msgstr "Link de titel met de detailpagina"
 
-#: views/handlers/filter/views_handler_filter_culturefeed_search_category.inc:32 views/handlers/filter/views_handler_filter_culturefeed_search_datetype.inc:26
+#: views/handlers/filter/views_handler_filter_culturefeed_search_category.inc:32
+#: views/handlers/filter/views_handler_filter_culturefeed_search_datetype.inc:26
 msgid "Category to filter on"
-msgstr ""
+msgstr "Categorie"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_daterange.inc:39
 msgid "Start date"
-msgstr ""
+msgstr "Begindatum"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_daterange.inc:42;50
 msgid "Format: !date_format"
@@ -243,43 +250,44 @@ msgstr ""
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_daterange.inc:47
 msgid "End date"
-msgstr ""
+msgstr "Einddatum"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_daterange.inc:61
 msgid "The entered start date is not in the correct format"
-msgstr ""
+msgstr "De ingevoerde begindatum is niet in het juiste formaat"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_daterange.inc:67
 msgid "The entered end date is not in the correct format"
-msgstr ""
+msgstr "De ingevoerde einddatum is niet in het juiste formaat"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_daterange.inc:79
 msgid "Between @start_date and @end_date"
-msgstr ""
+msgstr "Tussen begin- en einddatum"
 
-#: views/handlers/filter/views_handler_filter_culturefeed_search_filter_query.inc:24 views/handlers/filter/views_handler_filter_culturefeed_search_q.inc:16
+#: views/handlers/filter/views_handler_filter_culturefeed_search_filter_query.inc:24
+#: views/handlers/filter/views_handler_filter_culturefeed_search_q.inc:16
 msgid "Value"
-msgstr ""
+msgstr "Waarde"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_in.inc:36
 msgid "Contains all selected values"
-msgstr ""
+msgstr "Bevat alle geselecteerde waarden"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_in.inc:38
 msgid "Has value"
-msgstr ""
+msgstr "Heeft waarde"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_in.inc:41
 msgid "Contains at least 1 of the selected values"
-msgstr ""
+msgstr "Heeft minstens 1 van de geselecteerde waarden"
 
 #: views/handlers/filter/views_handler_filter_culturefeed_search_in.inc:43
 msgid "Contains value"
-msgstr ""
+msgstr "Bevat waarde"
 
 #: views/plugins/culturefeed_search_views_row_cdb.inc:23
 msgid "View mode"
-msgstr ""
+msgstr "View mode"
 
 #: views/plugins/culturefeed_search_views_row_cdb.inc:34
 msgid "Summary"
@@ -287,5 +295,4 @@ msgstr "Samenvatting"
 
 #: views/plugins/culturefeed_search_views_row_cdb.inc:35
 msgid "Short summary"
-msgstr ""
-
+msgstr "Korte omschrijving"
